--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   build:
-    runs-on: macos-13
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -29,4 +29,4 @@ jobs:
         run: pnpm -r build
 
       - name: Run tests
-        run: pnpm -r test
+        run: pnpm --parallel test
