--- a/examples/origin-server/package.json
+++ b/examples/origin-server/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "build": "vite build --app",
     "dev": "vite dev",
+    "test": "node --no-warnings --import tsimp/import --test integration.spec.ts",
     "typegen": "wrangler types"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20240815.0",
     "@hattip/adapter-node": "0.0.47",
     "@jacob-ebey/vite-cloudflare-plugin": "workspace:*",
+    "tsimp": "2.0.11",
     "typescript": "5.5.4",
     "vite": "6.0.0-alpha.19",
     "wrangler": "3.72.0"
