--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-13
 
     steps:
       - name: Checkout repository
@@ -32,4 +32,4 @@ jobs:
         run: pnpm -r build
 
       - name: Run tests
-        run: pnpm --parallel test
+        run: pnpm -r test
