--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,17 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: macos-13
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
-        with:
-          version: 9
-          run_install: false
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -25,8 +19,11 @@ jobs:
           node-version: 22
           cache: "pnpm"
 
-      - name: Install dependencies
-        run: pnpm install
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 9
+          run_install: true
 
       - name: Build
         run: pnpm -r build
