feat: add vite-bridged-assets plugin chore: add react example

--- a/packages/multi-condition-example/package.json
+++ b/packages/multi-condition-example/package.json
@@ -10,6 +10,7 @@
       "b": "./b.js",
       "c": "./c.js",
       "default": "./index.js"
-    }
+    },
+    "./package.json": "./package.json"
   }
 }
