--- a/packages/vite-bridged-assets/package.json
+++ b/packages/vite-bridged-assets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jacob-ebey/vite-cloudflare-plugin",
+  "name": "@jacob-ebey/vite-bridged-assets-plugin",
   "version": "0.0.0",
   "type": "module",
   "description": "",
@@ -11,28 +11,20 @@
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
+    "./types": "./types.d.ts",
     "./package.json": "./package.json"
   },
   "scripts": {
     "build": "tsup",
-    "test": "node --no-warnings --import tsimp/import --test integration.spec.ts",
     "watch": "tsup --watch"
   },
   "peerDependencies": {
-    "vite": "6.0.0-alpha.19",
-    "wrangler": ">=3.72.0"
-  },
-  "dependencies": {
-    "miniflare": "3.20240806.1"
+    "vite": "6.0.0-alpha.19"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20240815.0",
     "@types/node": "22.4.0",
-    "execa": "9.3.1",
-    "tsimp": "2.0.11",
     "tsup": "8.2.4",
     "typescript": "5.5.4",
-    "vite": "6.0.0-alpha.19",
-    "wrangler": "3.72.0"
+    "vite": "6.0.0-alpha.19"
   }
 }
