--- a/packages/vite-cloudflare/fixture/package.json
+++ b/packages/vite-cloudflare/fixture/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hello-world",
+  "private": true,
+  "name": "@fixture/vite-cloudflare-plugin",
   "version": "0.0.0",
   "type": "module",
   "description": "",
