--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "private": true,
+  "scripts": {
+    "build": "pnpm -r build",
+    "changeset": "changeset",
+    "ci:publish": "pnpm publish -r",
+    "test": "pnpm --parallel test"
+  },
+  "devDependencies": {
+    "@changesets/changelog-github": "0.5.0",
+    "@changesets/cli": "2.27.7"
+  },
   "pnpm": {
     "overrides": {
       "vite": "6.0.0-alpha.19"
