--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,13 +19,16 @@ jobs:
         name: Install pnpm
         with:
           version: 9
-          run_install: true
+          run_install: false
 
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i --frozen-lockfile
 
       - name: Build
         run: pnpm -r build
