--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,7 @@ jobs:
         run: pnpm i --frozen-lockfile
 
       - name: Build
-        run: pnpm -r build
+        run: pnpm -r --filter @jacob-ebey/vite-bridged-assets-plugin --filter @jacob-ebey/vite-cloudflare-plugin build
 
       - name: Create Release Pull Request or Publish to NPM
         id: changesets
