only publish needed files

--- a/packages/vite-bridged-assets/package.json
+++ b/packages/vite-bridged-assets/package.json
@@ -6,6 +6,11 @@
   "keywords": [],
   "author": "Jacob Ebey <jacob.ebey@live.com>",
   "license": "ISC",
+  "files": [
+    "dist",
+    "README.md",
+    "types.d.ts"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
