--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "pnpm --parallel test"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@changesets/changelog-github": "0.5.0",
     "@changesets/cli": "2.27.7"
   },
