--- a/examples/react-router/package.json
+++ b/examples/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@example/pages",
+  "name": "@example/react-router",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
