--- a/examples/durable-object-websocket/wrangler.toml
+++ b/examples/durable-object-websocket/wrangler.toml
@@ -15,7 +15,8 @@ new_classes = ["WebSocketDurableObject"]
 [[env.development.durable_objects.bindings]]
 name = "DO_WEBSOCKET"
 class_name = "WebSocketDurableObject"
-script_name = "worker"
+script_name = "src/durable-object.ts"
+environment = "worker"
 
 [[env.development.migrations]]
 tag = "v1"
